force-app/main/default/objects/Staggered__c/Staggered__c.object-meta.xml
<CustomObject>
    <label>Staggered</label>
    <nameField>
        <displayFormat>S-{00}</displayFormat>
        <label>Staggered Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staggered</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>