force-app/main/default/objects/Staggered__c/fields/Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fee_Amount__c</fullName>
    <inlineHelpText>Please key in the Fee Amount applicable for each staggered period.</inlineHelpText>
    <label>Fee Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>