force-app/main/default/objects/Staggered__c/fields/FeeSchedule__c.field-meta.xml
<CustomField>
    <fullName>FeeSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This gets auto populated upon save.</inlineHelpText>
    <label>Fee Schedule</label>
    <referenceTo>FeeSchedules__c</referenceTo>
    <relationshipLabel>Staggered</relationshipLabel>
    <relationshipName>Staggered</relationshipName>
    <type>Lookup</type>
</CustomField>