force-app/main/default/objects/Staggered__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <inlineHelpText>Please key in the Staggered period(From - To)</inlineHelpText>
    <label>Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>